--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <meta property="og:title" content="Spartan Bucket List" />
+    <meta property="og:description" content="Life without dreams is no life at all" />
+    <meta property="og:image" content="{{ url_for('static', filename='ogimage.jpg') }}" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -82,8 +84,6 @@
         .mybox>li>h2.done {
             text-decoration: line-through
         }
-
-         
     </style>
     <script>
         $(document).ready(function () {
@@ -96,8 +96,8 @@
                 url: "/bucket",
                 data: {},
                 success: function (response) {
-                   let rows = response['buckets'];
-                   for (let i = 0; i < rows.length; i++){
+                    let rows = response['buckets'];
+                    for (let i = 0; i < rows.length; i++) {
                         let bucket = rows[i]['bucket'];
                         let num = rows[i]['num'];
                         let done = rows[i]['done'];
@@ -121,7 +121,7 @@
                             `;
                         }
                         $('#bucket-list').append(temp_html);
-                   }
+                    }
                 }
             });
         }
@@ -172,7 +172,7 @@
             <button onclick="save_bucket()" type="button" class="btn btn-outline-primary">Save</button>
         </div>
     </div>
-    <div class="mybox" id="bucket-list"> 
+    <div class="mybox" id="bucket-list">
     </div>
 </body>
 
